--- a/milestone_3/o3.ipynb
+++ b/milestone_3/o3.ipynb
@@ -37,12 +37,12 @@
    "source": [
     "# read original data\n",
     "\n",
-    "train = pd.read_csv('E:/python/train_pca.csv')\n",
-    "test = pd.read_csv('E:/python/test_pca.csv')\n",
+    "train = pd.read_csv('E:/python/train.csv')\n",
+    "test = pd.read_csv('E:/python/test.csv')\n",
     "\n",
-    "trainData  = train.drop(['Activity'], axis=1).values\n",
+    "trainData  = train.drop(['subject','Activity'], axis=1).values\n",
     "trainLabel = train.Activity.values\n",
-    "testData  = test.drop(['Activity'], axis=1).values\n",
+    "testData  = test.drop(['subject','Activity'], axis=1).values\n",
     "testLabel = test.Activity.values\n",
     "\n"
    ]
@@ -64,14 +64,14 @@
      "output_type": "stream",
      "text": [
       "shape of neural network: \n",
-      "[(50, 10), (10, 10), (10, 6)]\n",
+      "[(561, 20), (20, 10), (10, 6)]\n",
       "number of iterations ran: \n",
-      "501\n"
+      "743\n"
      ]
     }
    ],
    "source": [
-    "clf = MLPClassifier(solver='lbfgs',hidden_layer_sizes=(10,10),alpha=0.01,max_iter=500)\n",
+    "clf = MLPClassifier(solver='lbfgs',hidden_layer_sizes=(20,10),alpha=0.01,max_iter=1000)\n",
     "clf.fit(trainData,trainLabel)\n",
     "\n",
     "print(\"shape of neural network: \")\n",
@@ -91,9 +91,9 @@
      "output_type": "stream",
      "text": [
       "accuracy on training set: \n",
-      "0.9851741022850925\n",
+      "1.0\n",
       "accuracy on test set: \n",
-      "0.9182219205972175\n"
+      "0.9446895147607737\n"
      ]
     }
    ],
@@ -123,14 +123,14 @@
      "output_type": "stream",
      "text": [
       "shape of neural network: \n",
-      "[(50, 10), (10, 10), (10, 6)]\n",
+      "[(561, 20), (20, 10), (10, 6)]\n",
       "number of iterations ran: \n",
-      "256\n"
+      "163\n"
      ]
     }
    ],
    "source": [
-    "clf = MLPClassifier(solver='sgd',hidden_layer_sizes=(10,10),alpha=0.01,max_iter=500)\n",
+    "clf = MLPClassifier(solver='sgd',hidden_layer_sizes=(20,10),alpha=0.01,max_iter=500)\n",
     "clf.fit(trainData,trainLabel)\n",
     "\n",
     "print(\"shape of neural network: \")\n",
@@ -150,9 +150,9 @@
      "output_type": "stream",
      "text": [
       "accuracy on training set: \n",
-      "0.9579706202393906\n",
+      "0.98449401523395\n",
       "accuracy on test set: \n",
-      "0.9246691550729556\n"
+      "0.9477434679334917\n"
      ]
     }
    ],
