--- a/milestone_4/hidden5.ipynb
+++ b/milestone_4/hidden5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -64,31 +64,31 @@
       "Explained Variance Ratio for Each PC: \n",
       "[6.25544400e-01 4.91302272e-02 4.12146745e-02 1.87495612e-02\n",
       " 1.69485999e-02 1.27206929e-02 1.17668514e-02 1.06897316e-02\n",
-      " 9.69379779e-03 8.58018171e-03 7.62301911e-03 6.72445660e-03\n",
+      " 9.69379779e-03 8.58018171e-03 7.62301911e-03 6.72445661e-03\n",
       " 5.79419596e-03 5.57880638e-03 4.98925730e-03 4.74937626e-03\n",
-      " 4.67200109e-03 4.31617860e-03 4.25715179e-03 4.10395038e-03\n",
-      " 3.94002401e-03 3.75309315e-03 3.52427487e-03 3.39359425e-03\n",
-      " 3.32138992e-03 3.19428782e-03 3.01779143e-03 2.91782566e-03\n",
-      " 2.89569947e-03 2.81927782e-03 2.76704139e-03 2.63395033e-03\n",
-      " 2.55306658e-03 2.35865813e-03 2.30652240e-03 2.23648107e-03\n",
-      " 2.22948106e-03 2.10275923e-03 2.08392804e-03 2.04773487e-03\n",
-      " 1.92856051e-03 1.88879467e-03 1.81179999e-03 1.79472438e-03\n",
-      " 1.72327132e-03 1.60201476e-03 1.57036754e-03 1.56626060e-03\n",
-      " 1.52969058e-03 1.50350633e-03 1.45116731e-03 1.40637203e-03\n",
-      " 1.36823202e-03 1.26843757e-03 1.25002312e-03 1.19736793e-03\n",
-      " 1.18113018e-03 1.14985770e-03 1.13076555e-03 1.09658439e-03\n",
-      " 1.07695333e-03 1.04874210e-03 1.03882964e-03 1.01440363e-03\n",
-      " 9.91204993e-04 9.70154341e-04 9.53879512e-04 9.13843199e-04\n",
-      " 8.87255647e-04 8.75348788e-04 8.51241902e-04 8.27528834e-04\n",
-      " 8.19718518e-04 8.05234825e-04 7.78212270e-04 7.77194587e-04\n",
-      " 7.71175402e-04 7.43841360e-04 7.29873218e-04 7.18946902e-04\n",
-      " 6.99437471e-04 6.84710398e-04 6.75935393e-04 6.58813744e-04\n",
-      " 6.49725807e-04 6.47608290e-04 6.33823288e-04 6.27271888e-04\n",
-      " 6.07195417e-04 5.95345845e-04 5.93626156e-04 5.80272818e-04\n",
-      " 5.60032363e-04 5.46105733e-04 5.41731940e-04 5.30478357e-04\n",
-      " 5.21576966e-04 5.16532573e-04 5.10951739e-04 4.94364098e-04]\n",
+      " 4.67200109e-03 4.31617860e-03 4.25715180e-03 4.10395038e-03\n",
+      " 3.94002400e-03 3.75309316e-03 3.52427487e-03 3.39359425e-03\n",
+      " 3.32138996e-03 3.19428783e-03 3.01779146e-03 2.91782571e-03\n",
+      " 2.89569948e-03 2.81927792e-03 2.76704144e-03 2.63395030e-03\n",
+      " 2.55306673e-03 2.35865853e-03 2.30652249e-03 2.23648124e-03\n",
+      " 2.22948080e-03 2.10275933e-03 2.08392873e-03 2.04773656e-03\n",
+      " 1.92856295e-03 1.88879361e-03 1.81179963e-03 1.79472355e-03\n",
+      " 1.72327460e-03 1.60200984e-03 1.57038945e-03 1.56626561e-03\n",
+      " 1.52968169e-03 1.50350115e-03 1.45115612e-03 1.40638260e-03\n",
+      " 1.36823338e-03 1.26852927e-03 1.25004068e-03 1.19737751e-03\n",
+      " 1.18115664e-03 1.14990610e-03 1.13073876e-03 1.09663470e-03\n",
+      " 1.07688524e-03 1.04889623e-03 1.03876799e-03 1.01430888e-03\n",
+      " 9.91279824e-04 9.70084080e-04 9.53917725e-04 9.14072873e-04\n",
+      " 8.87310829e-04 8.75811067e-04 8.52083881e-04 8.27907531e-04\n",
+      " 8.21436844e-04 8.05352277e-04 7.80891529e-04 7.77520946e-04\n",
+      " 7.69002605e-04 7.43788845e-04 7.30021690e-04 7.17846108e-04\n",
+      " 7.01364230e-04 6.86588351e-04 6.76345396e-04 6.60922182e-04\n",
+      " 6.50402846e-04 6.44089878e-04 6.34328814e-04 6.22964112e-04\n",
+      " 6.05992111e-04 6.00488442e-04 5.96525587e-04 5.83848009e-04\n",
+      " 5.66798169e-04 5.43953720e-04 5.38762849e-04 5.29230114e-04\n",
+      " 5.19648569e-04 5.13930134e-04 5.09608531e-04 4.95315617e-04]\n",
       "Cumulated Explained Variance Ratio: \n",
-      "0.9728320447702948\n",
+      "0.9728414488208085\n",
       "Dimension for Transformed Training Set: \n",
       "(7352, 100)\n",
       "Dimension for Transformed Training Set: \n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -134,8 +134,13 @@
     }
    ],
    "source": [
-    "train_pca = train_pca[sample(list(range(1,7352)),700),:]\n",
-    "test_pca = test_pca[sample(list(range(1,2947)),300),:]\n",
+    "ind1 = sample(list(range(1,7352)),700);\n",
+    "ind2 = sample(list(range(1,2947)),300);\n",
+    "train_pca = train_pca[ind1,:]\n",
+    "test_pca = test_pca[ind2,:]\n",
+    "trainLabel = trainLabel[ind1]\n",
+    "testLabel = testLabel[ind2]\n",
+    "\n",
     "\n",
     "print(\"Dimension for Transformed Training Set: \")\n",
     "print(train_pca.shape)\n",
@@ -145,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
